--- a/src/car-lists/index.html
+++ b/src/car-lists/index.html
@@ -141,6 +141,7 @@
     <div class="partners-logo px-5 md:px-12 lg:px-24 xl:px-36">
       <img src="..\assets\css 1 (1).png" alt="" />
     </div>
+    <div id="footer"></div>
 
     <script type="module" src="../../main.js"></script>
     <script type="module" src="../js/car-lists.js">
